--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,9 +2,9 @@
 ---
 
 // Colors
-$primary: #e5261f;
-$primary-dark: #a01b16;
-$secondary: #f88379;
+$primary: #172652;
+$primary-dark: #172652;
+$secondary: #0c2a84;
 $black: #2f2f41;
 $white: #ffffff;
 $white-offset: #fff6f8;
